[gd_scene load_steps=9 format=2]

[ext_resource path="res://background.jpg" type="Texture" id=1]
[ext_resource path="res://EnemyScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainScene.gd" type="Script" id=3]
[ext_resource path="res://PlayerScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://background_sound.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 5 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )
enemy_scene = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -300, 0 )
scale = Vector2( 0.26, 0.26 )
texture = ExtResource( 1 )
centered = false

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 504, 667 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Canvas"]
margin_left = 6.0
margin_top = 335.0
margin_right = 1019.0
margin_bottom = 396.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Clique na tela jogar"
align = 1

[node name="GameOverLabel" type="Label" parent="Canvas"]
margin_top = 211.0
margin_right = 1030.0
margin_bottom = 284.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Fim de Jogo "
align = 1

[node name="Background_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
